<resources>
    <string name="app_name">wonder</string>
    <string name="explore">Explore</string>
    <string name="todo">TODO</string>
    <string name="get_start">Get Started</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="live_life_with_no_excuses_travel_with_no_regret">Live life with no excuses, travel with no regret</string>
    <string name="welcome_to_wonder">Welcome to Wonder</string>
    <string name="or">Or</string>
    <string name="sign_in">Sign in</string>
    <string name="signup">signup</string>
    <string name="welcome_back">Welcome back</string>
    <string name="please_log_in_to_your_account">Please log in to your account</string>
    <string name="email_or_phone_number">Email</string>
    <string name="password">Password</string>
    <string name="test1">Don’t have an account?</string>
    <string name="test2">" Sign Up"</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">UserName</string>
    <string name="by_creating_an_account_you_agree_to_our_term_and_conditions">By creating an account, you agree to our Term and Conditions</string>
    <string name="register_new_account">Register new account</string>
    <string name="please_fill_in_with_your_information">please fill in with your information</string>
    <string name="welcome">Welcome,</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="popular_experiences">Popular Experiences</string>
    <string name="popular_destinations">Popular Destinations</string>
    <string name="travel_stories">Travel Stories</string>
    <string name="experiences_in_spotlight">Experiences in spotlight</string>
    <string name="show_all">show all ></string>
    <string name="post">post</string>
    <string name="share_your_experience">Share your experience?</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="share_your_location">Share your Location</string>
    <string name="mohammed_ali">Mohammed ali</string>
    <string name="back">back</string>
    <string name="get_password_link">get_password_link</string>
    <string name="email_hint">email_hint</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="comminuty">Comminuty</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="logout">LogOut</string>
    <string name="textview">TextView</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_rum_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet, consectetur adipiscing elit,rum eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="textview1">TextView</string>
    <string name="add">add</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="text_comment_goes_here">Text Comment Goes Here</string>
    <string name="_10_20">10:20</string>
</resources>