<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SigninActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bk">
    <LinearLayout
        android:layout_width="355dp"
        android:layout_marginTop="250dp"
        android:layout_height="405dp"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/whitebck">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textDirection="firstStrongLtr"
                android:textColor="@color/black"
                android:textAlignment="textStart"
                android:textSize="22sp"
                android:gravity="right"
                android:textStyle="bold"
                tools:ignore="RtlCompat,RtlHardcoded" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_log_in_to_your_account"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="25dp"
            android:gravity="center">

            <EditText
                android:id="@+id/text_email"
                android:layout_width="305dp"
                android:layout_height="52dp"
                android:padding="16dp"
                android:textColorHint="#696974"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                android:hint="@string/email_or_phone_number"
                android:background="@drawable/passem"
                android:autofillHints="no"
                android:inputType="textEmailAddress"
                android:scrollbarSize="55dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_pass"
                android:layout_width="305dp"
                android:layout_height="52dp"
                android:autofillHints="no"
                android:maxLength="8"
                android:background="@drawable/passem"
                android:drawableEnd="@drawable/toggle_pass"
                app:passwordToggleEnabled="true"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColorHint="#696974"
                android:textSize="15sp"
                android:scrollbarSize="55dp" />
            <TextView
                android:id="@+id/forgot_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="88dp"
                android:textSize="14sp"
                android:textColor="#171725"
                android:text="@string/forgot_password"/>
            <Button
                android:id="@+id/btnSubmit_login"
                android:layout_width="305dp"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:radius="24dp"
                android:text="@string/sign_in"
                android:backgroundTint="@color/bleu"/>
            <TextView
                android:id="@+id/textView"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text=""
                tools:ignore="InefficientWeight" />
            <ProgressBar
                android:id="@+id/idPBLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/progress_back"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>