<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardingActivity"
    android:background="@drawable/bk"
    android:orientation="vertical"
    android:padding="24dp">

<LinearLayout
    android:layout_width="355dp"
    android:layout_marginTop="450dp"
    android:layout_height="301dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/bck">
    <ViewFlipper
        android:id="@+id/view_flipper"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/g0"
            android:contentDescription="@string/todo" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/g1"
            android:contentDescription="@string/todo" />

    </ViewFlipper>

    <Button
        android:id="@+id/get_started"
        android:layout_width="281dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="62dp"
        android:text="@string/get_start"
        android:radius="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/black" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_for_now"/>

</LinearLayout>
</RelativeLayout>