<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/welcome"
            android:id="@+id/hello" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/bleu"
            android:text=""
            android:id="@+id/username" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"

            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="169dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/travel_stories" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/bleu"
                android:text="@string/show_all" />


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="87dp"
                android:textStyle="bold"
                android:text="@string/experiences_in_spotlight"
                android:textColor="@color/black"
                android:textSize="18sp"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/bleu"
                android:text="@string/show_all" />
        </LinearLayout>

        <LinearLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="112dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/popular_destinations" />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/bleu"
                android:text="@string/show_all" />
        </LinearLayout>
        <LinearLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginEnd="115dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/popular_experiences" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/bleu"
                android:text="@string/show_all" />
        </LinearLayout>
        <LinearLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginEnd="140dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/upcoming_events" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/bleu"
                android:text="@string/show_all" />
        </LinearLayout>





    </LinearLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frame_layout">
        <com.google.android.material.bottomappbar.BottomAppBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottomAppBar"
            android:layout_gravity="bottom"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="50dp">
            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/bottom_navigation_menu"
                android:background="@android:color/transparent"
                app:elevation="0dp"
                android:layout_marginEnd="20dp"/>
        </com.google.android.material.bottomappbar.BottomAppBar>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search"
            app:layout_anchor="@id/bottomAppBar"
            app:maxImageSize="40dp"
            app:tint ="@color/white"
            android:backgroundTint="@color/bleu"
            android:contentDescription="@string/todo" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>
